--- a/OurNN.ipynb
+++ b/OurNN.ipynb
@@ -939,7 +939,7 @@
     "\n",
     "############### HANS:\n",
     "Linear_features_in = 16*31*13\n",
-    "Linear_features_out = 1000\n",
+    "Linear_features_out = 1000 # This can be changed as we like\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
@@ -979,11 +979,11 @@
     "                            bias=False)\n",
     "        \n",
     "        # Batchnorms for linear\n",
-    "        self.batchnorm_linear1 = nn.BatchNorm1d(Linear_features_in)\n",
+    "        self.batchnorm_linear = nn.BatchNorm1d(Linear_features_in)\n",
     "        self.batchnorm_linear2 = nn.BatchNorm1d(Linear_features_out)\n",
     "        \n",
     "        # Adding dropout\n",
-    "        self.dropout_linear1 = nn.Dropout(p=0.5)\n",
+    "        self.dropout_linear = nn.Dropout(p=0.5)\n",
     "        \n",
     "        \n",
     "    def forward(self, x_img):\n",
@@ -996,10 +996,10 @@
     "        #x = self.pool_1(x)\n",
     "        x = F.relu(x)\n",
     "        x = F.avg_pool2d(x,2,2)\n",
-    "\n",
-    "        ## Through the first convolutional layer \n",
     "        x = self.batchnorm_conv1(x)\n",
     "        x = self.dropout_conv1(x)\n",
+    "        \n",
+    "        ## Through the second convolutional layer \n",
     "        x = self.conv_2(x)\n",
     "        x = F.relu(x)\n",
     "        #x = F.avg_pool2d(x,2,2)\n",
@@ -1017,13 +1017,13 @@
     "        \n",
     "        \n",
     "        # Passing through the first Linear Layer\n",
-    "        X = self.batchnorm_linear1(features_cat)\n",
+    "        X = self.batchnorm_linear(features_cat)\n",
     "        X = self.l_1(X) \n",
     "        # Passing it through the activation function\n",
     "        feature_vec = F.relu(X)\n",
     "        \n",
     "        # Adding a dropout layer. Notice we want to output the above all\n",
-    "        X = self.dropout_linear1(feature_vec)\n",
+    "        X = self.dropout_linear(feature_vec)\n",
     "        # And for output (we dont want to normalize the features we pull out)\n",
     "        X = self.batchnorm_linear2(X)\n",
     "        out['out'] = F.softmax(self.l_out(X), dim=1) \n",
@@ -1354,7 +1354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
