--- a/OurNetworkOurData.ipynb
+++ b/OurNetworkOurData.ipynb
@@ -3646,6 +3646,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'out': tensor([[0.5932, 0.4068],\n",
+       "         [0.4029, 0.5971],\n",
+       "         [0.7273, 0.2727],\n",
+       "         [0.0900, 0.9100],\n",
+       "         [0.6723, 0.3277],\n",
+       "         [0.2866, 0.7134],\n",
+       "         [0.6798, 0.3202],\n",
+       "         [0.6884, 0.3116],\n",
+       "         [0.3117, 0.6883],\n",
+       "         [0.6968, 0.3032],\n",
+       "         [0.1552, 0.8448],\n",
+       "         [0.3997, 0.6003],\n",
+       "         [0.1745, 0.8255],\n",
+       "         [0.5466, 0.4534],\n",
+       "         [0.6469, 0.3531],\n",
+       "         [0.2483, 0.7517],\n",
+       "         [0.6237, 0.3763],\n",
+       "         [0.6653, 0.3347],\n",
+       "         [0.2354, 0.7646],\n",
+       "         [0.4188, 0.5812],\n",
+       "         [0.5202, 0.4798],\n",
+       "         [0.6067, 0.3933],\n",
+       "         [0.3689, 0.6311],\n",
+       "         [0.5331, 0.4669],\n",
+       "         [0.4543, 0.5457],\n",
+       "         [0.5836, 0.4164],\n",
+       "         [0.5354, 0.4646],\n",
+       "         [0.7035, 0.2965],\n",
+       "         [0.6947, 0.3053],\n",
+       "         [0.1590, 0.8410],\n",
+       "         [0.6450, 0.3550],\n",
+       "         [0.7461, 0.2539],\n",
+       "         [0.6125, 0.3875],\n",
+       "         [0.5801, 0.4199],\n",
+       "         [0.2962, 0.7038],\n",
+       "         [0.3439, 0.6561],\n",
+       "         [0.5743, 0.4257],\n",
+       "         [0.6217, 0.3783],\n",
+       "         [0.7223, 0.2777],\n",
+       "         [0.2997, 0.7003],\n",
+       "         [0.3455, 0.6545],\n",
+       "         [0.4347, 0.5653],\n",
+       "         [0.2434, 0.7566],\n",
+       "         [0.7243, 0.2757],\n",
+       "         [0.4406, 0.5594],\n",
+       "         [0.5670, 0.4330],\n",
+       "         [0.3164, 0.6836],\n",
+       "         [0.3491, 0.6509],\n",
+       "         [0.3542, 0.6458],\n",
+       "         [0.4641, 0.5359],\n",
+       "         [0.4651, 0.5349],\n",
+       "         [0.5845, 0.4155],\n",
+       "         [0.3240, 0.6760],\n",
+       "         [0.5681, 0.4319],\n",
+       "         [0.4668, 0.5332],\n",
+       "         [0.7543, 0.2457],\n",
+       "         [0.3745, 0.6255],\n",
+       "         [0.6689, 0.3311],\n",
+       "         [0.7710, 0.2290],\n",
+       "         [0.6365, 0.3635],\n",
+       "         [0.4312, 0.5688],\n",
+       "         [0.5397, 0.4603],\n",
+       "         [0.2228, 0.7772],\n",
+       "         [0.6815, 0.3185],\n",
+       "         [0.7949, 0.2051],\n",
+       "         [0.4538, 0.5462],\n",
+       "         [0.4925, 0.5075],\n",
+       "         [0.6795, 0.3205],\n",
+       "         [0.7943, 0.2057],\n",
+       "         [0.4469, 0.5531],\n",
+       "         [0.2041, 0.7959],\n",
+       "         [0.3141, 0.6859],\n",
+       "         [0.3243, 0.6757],\n",
+       "         [0.3939, 0.6061],\n",
+       "         [0.6969, 0.3031],\n",
+       "         [0.6375, 0.3625],\n",
+       "         [0.3919, 0.6081],\n",
+       "         [0.6650, 0.3350],\n",
+       "         [0.6870, 0.3130],\n",
+       "         [0.3377, 0.6623],\n",
+       "         [0.5898, 0.4102],\n",
+       "         [0.5869, 0.4131],\n",
+       "         [0.3353, 0.6647],\n",
+       "         [0.6353, 0.3647],\n",
+       "         [0.4727, 0.5273],\n",
+       "         [0.4542, 0.5458],\n",
+       "         [0.4540, 0.5460],\n",
+       "         [0.6367, 0.3633],\n",
+       "         [0.6416, 0.3584],\n",
+       "         [0.6827, 0.3173],\n",
+       "         [0.3291, 0.6709],\n",
+       "         [0.3571, 0.6429],\n",
+       "         [0.5038, 0.4962],\n",
+       "         [0.6289, 0.3711],\n",
+       "         [0.8034, 0.1966],\n",
+       "         [0.5437, 0.4563],\n",
+       "         [0.6123, 0.3877],\n",
+       "         [0.5036, 0.4964],\n",
+       "         [0.2238, 0.7762],\n",
+       "         [0.4864, 0.5136],\n",
+       "         [0.3916, 0.6084]])}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
