Added pretrained + some PCA stuff

--- a/MasterCode.ipynb
+++ b/MasterCode.ipynb
@@ -23013,13 +23013,7 @@
       "- Upper passband edge: 40.00 Hz\n",
       "- Upper transition bandwidth: 10.00 Hz (-6 dB cutoff frequency: 45.00 Hz)\n",
       "- Filter length: 845 samples (6.602 sec)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 40 Hz\n",
       "\n",
@@ -24112,13 +24106,7 @@
       "- Upper passband edge: 40.00 Hz\n",
       "- Upper transition bandwidth: 10.00 Hz (-6 dB cutoff frequency: 45.00 Hz)\n",
       "- Filter length: 845 samples (6.602 sec)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Filtering raw data in 1 contiguous segment\n",
       "Setting up band-pass filter from 0.5 - 40 Hz\n",
       "\n",
@@ -33909,7 +33897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA \n",
+    "# PCA on feature vector of our own neural network\n",
     "The prinicple component analysis is calculated. Next is the first and second prinicple component plotted against eachother. Lastly, is the spectogram with the highest outlier score according to PCA plotted. "
    ]
   },
@@ -34065,7 +34053,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA on Leaf-trained data"
+    "# PCA on raw data"
    ]
   },
   {
@@ -34113,7 +34101,7 @@
    "source": [
     "## PCA Func: \n",
     "from sklearn.decomposition import PCA\n",
-    "#n_components=0.80 means it will return the Eigenvectors that have the 80% of the variation in the dataset\n",
+    "#n_components=0.99 means it will return the Eigenvectors that have 99%% of the variation in the dataset\n",
     "imgsSpecPCA=imgs.reshape(imgs.shape[0],-1)\n",
     "specto_pca = PCA(n_components=0.99)\n",
     "specto_pca.fit(imgsSpecPCA)\n",
@@ -34673,7 +34661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
