added more data loading to the master code

--- a/MasterCode.ipynb
+++ b/MasterCode.ipynb
@@ -34058,6 +34058,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading EEG files from folder \n",
+    "\n",
+    "## Path to the EEG files\n",
+    "path =r'C:\\Users\\andre\\Desktop\\dataEEG\\Original participant EEGs\\1Sept'\n",
+    "os.chdir(path)\n",
+    "window_size = 60 \n",
+    "selection = ['P3'] \n",
+    "\n",
+    "j=0\n",
+    "for filename in os.listdir('.'):\n",
+    "    if filename.endswith('.edf'):\n",
+    "        raw = mne.io.read_raw_edf(filename, preload = True)\n",
+    "        picks = mne.pick_types(raw.info, meg=False, eeg=True, eog=False,\n",
+    "                       stim=False, exclude='bads', selection=selection)\n",
+    "\n",
+    "        # Filter data with low and high frequancy \n",
+    "        raw.filter(l_freq=0.5, h_freq=40)\n",
+    "        freq = raw.info['sfreq']\n",
+    "        num_samples = raw.n_times\n",
+    "        \n",
+    "        # Splitting data according to window size \n",
+    "        lower_bound = list(range(0, int(num_samples/freq)-window_size, window_size-int(window_size/2)))\n",
+    "        upper_bound = list(range(window_size, int(num_samples/freq), window_size-int(window_size/2)))\n",
+    "        i = 0\n",
+    "        \n",
+    "        # Add noise to pictures with index in noisePicture \n",
+    "        noisePicture = random.sample(range(2032), 2032//2)\n",
+    "\n",
+    "        for low, up in zip(lower_bound,upper_bound):\n",
+    "\n",
+    "            raw_subset = raw.copy()\n",
+    "            raw_subset.crop(tmin = low, tmax = up).load_data()\n",
+    "            raw_subset.filter(l_freq=0.5, h_freq=40)\n",
+    "            data = raw_subset.get_data(picks=picks)[0]\n",
+    "\n",
+    "            # if the i'te data is having added noise \n",
+    "            if i in noisePicture:  \n",
+    "                cov = mne.make_ad_hoc_cov(raw_subset.info)\n",
+    "                cov['data']*= 1000**2 \n",
+    "                rng = np.random.RandomState(10) \n",
+    "                mne.simulation.add_noise(raw_subset, cov)\n",
+    "                raw_subset.filter(l_freq=0.5, h_freq=40)\n",
+    "                data = raw_subset.get_data(picks=picks)[0]\n",
+    "\n",
+    "                if j == 0:\n",
+    "                    y = [1] #finding the widows which have added noise \n",
+    "                else:\n",
+    "                    y = np.append(y,[1], axis=0)\n",
+    "            else:\n",
+    "                data = data\n",
+    "                if j == 0:\n",
+    "                    y = [0]\n",
+    "                else:\n",
+    "                    y = np.append(y,[0], axis=0)\n",
+    "                    \n",
+    "            # Save spectogram data         \n",
+    "            ps, _, _, _ =plt.specgram(data, Fs = freq)\n",
+    "            s = ps.shape\n",
+    "            ps = ps.reshape(1,s[0], s[1], 1)\n",
+    "\n",
+    "            # Append filtered data and spectrogram data\n",
+    "            if j == 0:\n",
+    "                imgs = ps\n",
+    "                dataTid = data\n",
+    "            else:\n",
+    "                imgs = c = np.concatenate((imgs,ps), axis=0)\n",
+    "                dataTid  = np.append(dataTid,data, axis=0)\n",
+    "\n",
+    "            if i == 100: # max size manually set to 101 pics per file\n",
+    "                break\n",
+    "            i+=1\n",
+    "            \n",
+    "        j+=1\n",
+    "\n",
+    "# Save data on specific shape        \n",
+    "dataTid=dataTid.reshape(imgs.shape[0],-1)\n",
+    "# Save logarithmic data.\n",
+    "data_log = 10 *np.log10(dataTid+1)\n",
+    "# Save vector which indicates if noise have been added to the picture or not  \n",
+    "yTranspose = np.transpose(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
